prodcut display issue resolved
prodcut display issue resolved

--- a/product.liquid
+++ b/product.liquid
@@ -20,7 +20,11 @@
       <div class="share-wrap twitter">
         <a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-text="{{ shop.name }} | {{ product.title }}:" data-via="{{ settings.twitter-username }}">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      </div><div class="share-wrap google">
+      </div>
+    
+    
+    
+    <div class="share-wrap google">
         <div class="g-plusone" data-size="medium" data-annotation="none"></div>
 
         <script type="text/javascript">
@@ -37,8 +41,11 @@
         <div class="fb-like" data-href="{{ shop.url }}{{ product.url }}" data-send="false" data-layout="button_count" data-width="90" data-show-faces="false"></div>
       </div>
     </div>
+    
+    {% endcomment %}
+    
   </div>
-   {% endcomment %}
+   
 
   <section id="product-area" class="clearfix">
 
