remove bug code
remove bug code

--- a/home-page.css
+++ b/home-page.css
@@ -1382,7 +1382,7 @@ display:none!important;
 margin:auto;
 }
 
-#mob-menu .col-xs-3 em,https://goodhyouman.myshopify.com/admin/themes/6755525?key=assets/home-page.css#
+#mob-menu .col-xs-3 em,
 #mob-menu .col-xs-4 em {
 float:none;
 font-size:1.1em;
