footer bottom whitespace
footer bottom whitespace fixed

--- a/home-page.css
+++ b/home-page.css
@@ -377,7 +377,7 @@ ul#GH-collection {
 }
 footer {
 	position:relative;
-	margin-top:-10px;
+	margin-bottom:-25px;
 }
 #instagram {
 	background:#000;
